--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <!-- build:css css/combined.css -->
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="js/vendor/owl.carousel.2.1.0/assets/owl.carousel.css">
+    <link rel="stylesheet" href="js/vendor/owl.carousel.2.1.0/assets/owl.theme.default.min.css">
     <!-- endbuild -->
+
 </head>
 <body>
 <!--[if lte IE 8]>
@@ -60,25 +63,13 @@
     <div class="ad">
         <div class="owl-carousel owl-theme">
             <div class="item">
-                <picture>
-                    <source srcset="img/ad001-l.png" media="(min-width:50em)">
-                    <source srcset="img/ad001-m.png" media="(min-width:30em)">
-                    <img src="img/ad001.png" alt="2015年度报告">
-                </picture>
+                <img src="img/ad001.png" alt="2015年度报告">
             </div>
             <div class="item">
-                <picture>
-                    <source srcset="img/ad002-l.png" media="(min-width: 50em)">
-                    <source srcset="img/ad002-m.png" media="(min-width: 30em)">
-                    <img srcset="img/ad002.png" alt="新年红包">
-                </picture>
+                <img src="img/ad002.png" alt="新年红包">
             </div>
             <div class="item">
-                <picture>
-                    <source srcset="img/ad003-l.png" media="(min-width: 50em)">
-                    <source srcset="img/ad003-m.png" media="(min-width: 30em)">
-                    <img srcset="img/ad003.png" alt="新手秘籍">
-                </picture>
+                <img src="img/ad003.png" alt="新手秘籍">
             </div>
         </div>
     </div>
@@ -271,16 +262,18 @@
 <footer>
     <ul>
         <li><span class="icon icon-zfywxk">支付业务许可证</span></li>
-        <li><span class="icon icon-pcirk">PCI认证</span></li>
-        <li><span class="icon icon-visayz">Visa 验证</span></li>
-        <li><span class="icon icon-vsjmfw">VerSign加密服务</span></li>
+        <li><span class="icon icon-picrz">PCI认证</span></li>
+        <li><span class="icon icon-visa">Visa 验证</span></li>
+        <li><span class="icon icon-jmfu">VerSign加密服务</span></li>
         <li><span class="icon icon-wlgs">网络工商</span></li>
-        <li><span class="icon icon-rzcx">电子商务协会认证诚信网</span></li>
-        <li><span class="icon icon-gs">北京工商</span></li>
+        <li><span class="icon icon-cxgs">电子商务协会认证诚信网</span></li>
+        <li><span class="icon icon-bjgs">北京工商</span></li>
     </ul>
     <p>北京某互联网金融公司 版权所有 ® 2015-2016</p>
 </footer>
 
-
+<script  src="js/vendor/jquery.min.js"></script>
+<script  src="js/vendor/owl.carousel.2.1.0/owl.carousel.min.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
