--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,7 @@
 
     <div class="ad">
         <div class="owl-carousel owl-theme">
-            <div class="item">
+            <!--<div class="item">
                 <img src="img/ad001.png" alt="2015年度报告">
             </div>
             <div class="item">
@@ -70,6 +70,33 @@
             </div>
             <div class="item">
                 <img src="img/ad003.png" alt="新手秘籍">
+            </div>-->
+            <div class="item">
+                <picture>
+                    <!--[if IE 9]><video style="display: none;"><![endif]-->
+                    <source srcset="img/ad001-l.png" media="(min-width:50em)">
+                    <source srcset="img/ad001-m.png" media="(min-width:30em)">
+                    <!--[if IE 9]></video><![endif]-->
+                    <img src="img/ad001.png" alt="2015年度报告">
+                </picture>
+            </div>
+            <div class="item">
+                <picture>
+                    <!--[if IE 9]><video style="display: none;"><![endif]-->
+                    <source srcset="img/ad002-l.png" media="(min-width: 50em)">
+                    <source srcset="img/ad002-m.png" media="(min-width: 30em)">
+                    <!--[if IE 9]></video><![endif]-->
+                    <img srcset="img/ad002.png" alt="新年红包">
+                </picture>
+            </div>
+            <div class="item">
+                <picture>
+                    <!--[if IE 9]><video style="display: none;"><![endif]-->
+                    <source srcset="img/ad003-l.png" media="(min-width: 50em)">
+                    <source srcset="img/ad003-m.png" media="(min-width: 30em)">
+                    <!--[if IE 9]></video><![endif]-->
+                    <img srcset="img/ad003.png" alt="新手秘籍">
+                </picture>
             </div>
         </div>
     </div>
@@ -272,8 +299,9 @@
     <p>北京某互联网金融公司 版权所有 ® 2015-2016</p>
 </footer>
 
-<script  src="js/vendor/jquery.min.js"></script>
+<script  src="temp/js/jquery.min.js"></script>
 <script  src="js/vendor/owl.carousel.2.1.0/owl.carousel.min.js"></script>
+<script src="js/vendor/picturefill.min.js" async></script>
 <script src="js/main.js"></script>
 </body>
 </html>
